[package]
authors = ["Konstantin Gukov <gukkos@gmail.com>"]
name = "python-dtparse"
version = "1.3.1"

[dependencies]
pyo3 = "0.12.4"
chrono = "0.4.19"

[lib]
name = "dtparse"
crate-type = ["cdylib"]

[features]
default = ["pyo3/extension-module"]

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3

[profile.test]
opt-level = 3
